AC_INIT([mbd], [0.0])

AC_DEFUN(program_exist, [[program_exist]]_$1)
m4_foreach([pname], [[tar], [cpio], [readlink], [install], [syslinux], [mlabel]],
[
        AC_CHECK_PROG(program_exist(pname), [pname], [pname], [no])
        if test "${program_exist(pname)}" = "no" ; then
           AC_MSG_ERROR(Cannot find pname)
        fi
])

AC_CHECK_PROGS([downloader], [wget curl], [no]) 
if test x_$downloader = x_no; then
   AC_MSG_ERROR(Cannot find downloader program)
else
        if test x_${downloader} == x_wget; then downloader='wget -O'; else downloader='curl -o'; fi
fi

m4_foreach([mbrfile], [[/usr/lib/syslinux/mbr.bin], [/usr/share/syslinux/mbr.bin]],
[
        AC_CHECK_FILE([mbrfile], [syslinux_mbr_file=mbrfile])
        $as_unset ac_cv_file_mbrfile
])

if test x_$syslinux_mbr_file = "x_"; then
   AC_MSG_ERROR(Cannot find syslinux "mbr.bin" file)
fi

AC_DEFUN([_isolinux_dir], [isolinux])
AC_DEFUN([magic_number], [2128506])
AC_SUBST([mbd_verbose], ['Multi Boot Disk Test, AC_PACKAGE_VERSION'])
AC_SUBST([magic], [magic_number])
AC_SUBST([mbd_label], ['MBOOTDISK'])
AC_SUBST([mbd_dir], ['/mbd'])
AC_SUBST([isolinux_dir], ['_isolinux_dir'])
AC_SUBST([images_dir], ['_isolinux_dir/iso'])
AC_SUBST([syslinux_mbr_file])
AC_SUBST([loop_dev], ['loop16'])
AC_SUBST([mbd_command], ['mbd'])
AC_SUBST([mbd_menu], ['mbd_menu'])
AC_SUBST([mbd_process_iso], ['mbd_process_iso'])
AC_SUBST([tmp_dir], [/tmp/mbd])

AC_ARG_VAR([target_device], [target partition device file (like "/dev/some-device")])
AC_ARG_VAR([desktop_link], [create Desktop link to the specified location])
if test x_"${target_device}" = "x_"; then 
   AC_MSG_ERROR([No target device specified, run like "./configure target_device=/dev/some-device"])
fi

include_script_lib=script/lib.sh
include_dialog_lib=script/dialog.sh
include_isolinux_lib=script/isolinux.sh
AC_SUBST_FILE(include_script_lib)
AC_SUBST_FILE(include_dialog_lib)
AC_SUBST_FILE(include_isolinux_lib)

AC_CONFIG_FILES([Makefile install_syslinux.sh script/lib.sh script/dialog.sh script/isolinux.sh script/mbd script/mbd_menu script/mbd_process_iso script/initrd/init script/initrd/before_switch_root])
AC_OUTPUT
AC_MSG_NOTICE([Ready to make])
